--- a/FRONTEND/serve/package.json
+++ b/FRONTEND/serve/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.5"
   }
 }
